# MCP-RAG-Playground

./: .gitignore  CLAUDE.md  README.md  flattened-codebase.xml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  test_milvus_config.py
.bmad-core/: install-manifest.yaml
.bmad-core/agent-teams/: team-fullstack.yaml
.claude/: settings.local.json
.claude/commands/: code-review.md  commit-push-gh.md
docs/: MCP_DEPLOYMENT_GUIDE.md  architecture-analysis.md  brainstorming-session-results.md  brief.md  brownfield-architecture.md  brownfield-prd.md  epic-2-proposal-kb-health-dashboard.md  kb-health-dashboard-specification.md  system-architecture-and-flow-documentation.md
docs/architecture/: appendix-useful-commands-and-scripts.md  current-development-workflow.md  data-models-and-apis.md  development-and-deployment.md  enhancement-prd-impact-analysis.md  extension-patterns-and-architectural-conventions.md  high-level-architecture.md  index.md  integration-points-and-external-dependencies.md  introduction.md  mvp-development-strategy.md  quick-reference-key-files-and-entry-points.md  source-tree-and-module-organization.md  technical-debt-and-known-issues.md  testing-reality.md
docs/prd/: epic-1-enhanced-document-lifecycle-management.md  epic-2-kb-health-analytics-dashboard.md  index.md  (+4 more)
examples/: mcp_server_example.py  mcp_server_production.py  rag_usage_example.py
logs/: log.txt
mcp_rag_playground/: __init__.py  main.py  milvus_config.py
mcp_rag_playground.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+104 files in other folders)
